--- a/5.md
+++ b/5.md
@@ -3,13 +3,13 @@
 ## **American Inclusion and Its Discontents**
 
 
-Few, if any, photographic exhibitions have achieved the popularity of the Museum of Modern Art’s 1955 venture, “Family of Man.” Curated by famed photographer Edward Steichen, the undertaking consisted of  503 distinct images taken in sixty-eight countries by 273 different photographers. After its New York debut, the show spent the next eight years touring the world, stopping in thirty-seven nations before being permanently installed at Common Market headquarters in Steichen’s native Luxembourg. In toto, nine million people saw some version of the exhibit. A book version, which is still in print, has sold four million copies. As the title suggests, Steichen hoped the exhibit would convey the underlying similarities among the peoples of the world. To that end, he grouped the images by theme—birth, work, play, courtship, marriage, death—rather than by country of origin. The panels of text that accompanied the image, written by Steichen’s brother-in-law, Pulitzer-Prize winning poet Carl Sandburg, underscored the point. Sandburg insisted there “is only one man in the world and his name is All Men. There is only one woman in the world and her name is All Women.” Humanity was, he insisted, “one big family hugging close to the ball of Earth for its life and being.” Capping the exhibit was a photograph of the mushroom cloud, a vivid reminder that nuclear weapons constituted a common threat to the whole of humanity. The theme of underlying commonality clearly resonated as witnessed by photographer Barbara Morgan's praise for the exhbition's ability to reveal to American viewers their shared humanity with a polygamist family.[^1]
+Few, if any, photographic exhibitions have achieved the popularity of the Museum of Modern Art’s 1955 venture, “Family of Man.” Curated by famed photographer Edward Steichen, the undertaking consisted of  503 distinct images taken in sixty-eight countries by 273 different photographers. After its New York debut, the show spent the next eight years touring the world, stopping in thirty-seven nations before being permanently installed at Common Market headquarters in Steichen’s native Luxembourg. In toto, nine million people saw some version of the exhibit. A book version, which is still in print, has sold four million copies. As the title suggests, Steichen hoped the exhibit would convey the underlying and deep connections among the peoples of the world. To that end, he grouped the images by activities and conditions common to all—birth, work, play, courtship, marriage, death—rather than by country of origin. The panels of text that accompanied the image, written by Steichen’s brother-in-law, Pulitzer-Prize winning poet Carl Sandburg, announced that there “is only one man in the world and his name is All Men. There is only one woman in the world and her name is All Women.” Humanity was, Sandburg maintained, “one big family hugging close to the ball of Earth for its life and being.” Capping the exhibit was a photograph of the mushroom cloud, a vivid reminder that nuclear weapons constituted a common threat to the whole of humanity. Echoing the endorsement of underlying commonality, photographer Barbara Morgan praised the exhibition for its ability to have American viewers look at a polygamist family and feel an intrinsic kinship.[^1]
 
-Not everyone applauded the exhibition or approved of its ideological position. Writing in 1958, famed photographer Walker Evans criticized what he regarded as its treacly sentimentality (“bogus heartfeeling”), which he saw as a consequence of its false universalism (“human familyhood”). Evans's condemnation echoed one that the French critic Roland Barthes leveled a year earlier but which did not appear in English until 1970. Barthes criticized the “Family of Man” as a mythology, an ideological maneuver that aspired to naturalize history, robbing it of its particularity and its true diversity by postulating a magic transformation in which a surface pluralism gives way to a common mold in which “man is born, works, laughs and dies everywhere in the same way.” Citing the fate of Emmet Till, the black Chicago teenager brutally murdered in Mississippi for ostensibly leering at a white woman, Barthes contended that fellow feeling rarely, if ever, canceled awareness of  group differences.[^2]
+Not everyone applauded the exhibition or approved of its ideological position. Writing in 1958, famed photographer Walker Evans criticized its treacly sentimentality (“bogus heartfeeling”), which resulted from its false universalism (“human familyhood”). Evans's condemnation echoed one that the French critic Roland Barthes leveled a year earlier but which did not appear in English until 1970. Barthes criticized the “Family of Man” as a mythology, an ideological maneuver that aspired to naturalize history, robbing it of its particularity and its true diversity by postulating a magic transformation in which a surface pluralism gives way to a common mold in which “man is born, works, laughs and dies everywhere in the same way.” Citing the fate of Emmet Till, the black Chicago teenager brutally murdered in Mississippi for ostensibly leering at a white woman, Barthes contended that fellow feeling rarely, if ever, canceled awareness of  group differences.[^2]
 
 Steichen's exhibition was just one of many cultural artifacts that emphasized social inclusion and solidarity. Observers rightly noted the growing talk of acceptance of those previously excluded and marginalized. Films about World War II often mirrored the "Family of Man" in their depiction of diverse military units whose members learn that acceptance of one another was the American way. It was that sentiment, so contrary to long-standing complaints about the United States becoming a polyglot boardinghouse, that led the editors of *Fortune* magazine to assert somewhat blithely that “The presence . . . of a bewildering number of races and national origins, creeds and shibboleths, economic interests and explosive ideas is to him [the American] no problem at all. On the contrary it is a great asset.”[^3]
 
-Inclusiveness as value and fact constituted a prime characteristic of academic discourse, as well. Challenging ideas of political power as concentrated in the ruling elite, a growing number of political scientists stressed the dispersal of power among competing, often newly organized and empowered interest groups. Sociologists, for their part, asserted that racial segregation ran afoul of the democratic creed at the heart of national identity, and historians mapped the assimilation process of immigrants and their descendants.[^4] Highlighting American diversity dovetailed nicely with the demands of the country during the Cold War, enabling champions of the West to contrast the variety of American social life with the gray and somber uniformity of totalitarian societies and to present integration as a selling point in the Cold War struggle for the hearts and minds of the decolonizing world.[^5]
+Inclusiveness as value and fact constituted a prime characteristic of academic discourse, as well. Numerous political scientists rejected theories of political power as flowing from a ruling elite for one that stressed its dispersal among competing, often newly organized and empowered interest groups. For their part, sociologists asserted that racial segregation ran afoul of the democratic creed at the heart of national identity and that failure to live by that creed led to social disturbance. Historians sought a key to national genius in immigration and assimilation. [^4] In highlighting American diversity and inclusion, American social science implicitly contrasted the variety and acceptance supposedly inherent in American social life with the gray and somber uniformity of totalitarian societies and bolstered Cold Ware-era appeals to decolonizing world.[^5]
 
 Those who discerned an inclusionary spirit and wide dispersal of power conceded the phenomena were often more aspirational than descriptive. Few denied that exclusion, hierarchy, and domination were common occurrences in postwar American life, but many observers recognized enough signs of change to anticipate that inclusion and broad participation were becoming more than empty ideals. Although the 1960s have a reputation as the high tide of postwar reform, the immediate postwar period witnessed, among other noteworthy developments, an increase in college matriculation from families that had never had a member attend, the greater availability of luxury goods, a growing acceptance of Jews and Catholics as legitimate and co-equal participants in American society, the endorsement of full citizenship rights for people of color by the Democratic Party in the North and the Supreme Court (two institutions that had vehemently opposed that goal in the nineteenth century), a dawning perception that domesticity and passivity constituted unproductive constraints on women, and even a stirring of homosexual rights organizations in coastal cities and, in such fields as music and art, tolerance of gays and lesbians. The assumption that social inclusivity was increasing provided the foundation for Howard Becker’s classic study _Outsiders_ (1963), which argued that deviants were not inherently marginal or ill-suited for social life but were men and women who chose to reject social rules. Their deviance was a matter of attitude rather than birth or necessity.[^6]
 
@@ -79,50 +79,52 @@ White ethnics were an especially celebrated success story of postwar inclusion. 
 
 [^18]:	Matthew Frye Jacobson, _Whiteness of a Different Color: European Immigrants and the Alchemy of Race_ (Cambridge, Mass.: Harvard University Press, 1998); Nell Irvin. Painter, _The History of White People_ (New York: W.W. Norton, 2010).
 
-Postwar assimilation stood in contrast to the cultural pluralism that Horace Kallen had endorsed at the beginning of the century. Kallen had understood immigrant groups as pieces in a mosaic with each group more or less retaining its essential character. Americans would share a public culture but large swathes would be lived in ethnic enclaves. Writing in 1964, sociologist Milton Gordon contended that the nation had replaced the ancestral group as the source of the customs, values, and behaviors with which most white Americans identified. Marriage and place of residence ceased to be predominantly ethnic, although people tended to marry and live among those who shared their religious and class identifications -- choices that hastened the loss of ethnic identification.[^19]
+Postwar assimilation contrasted with the cultural pluralism that Horace Kallen had endorsed at the beginning of the century. Kallen had understood immigrant groups as pieces in a mosaic with each group more or less retaining its essential character. Americans would share a public culture but large swathes would be lived in ethnic enclaves. Writing in 1964, sociologist Milton Gordon contended that the nation had replaced the ancestral group as the source of the customs, values, and behaviors with which most white Americans identified. Marriage and place of residence ceased to be predominantly ethnic, although people tended to marry and live among those who shared their religious and class identifications -- choices that hastened the loss of ethnic identification.[^19]
 
 [^19]:	Milton Gordon, _Assimilation in American Life: The Role of Race, Religion, and National Origins._ (New York: Oxford University Press, 1964).
 
-Gordon built on Will Herberg’s concept of the triple melting pot which Herberg introduced in his _Protestant, Catholic, Jew_ (1955) in which he traced how religion became the vehicle of assimilation. Immigrants had clung to national origin with its sense of shared language, custom, and religion for identity and security in a tumultuous and often hostile American environment. Since native-born Americans often rejected and denigrated them, and many always intended to return to their native lands, the first generation of immigrants were relatively isolated from American norms. The second generation, Herberg maintained, attempted to rid itself of “immigrant foreignness” in order to benefit from “the extraordinary mobility of American society.” Identifying with their families’ communities held them back but efforts to throw off those connections left them without real foundations. Adding to the alienation was a movement away from the ethnic-infused religion of their parents. Herberg’s third generation accepted that being an American meant jettisoning nationality, language, and customs but saw in religion a way to belong to a distinctive, defining group without giving up their Americanness.[^20]
+Gordon built on Will Herberg’s concept of the triple melting pot which Herberg introduced in his _Protestant, Catholic, Jew_ (1955), which traced how religion became the vehicle of assimilation. Because it offered a shared sense of language, custom, and religion, immigrants had clung to national origin for security in the face of native hostility. Such identities served well those denied acceptance or who intended to return to their native lands. Although the first generation were relatively isolated  from American norms, Heberg argued that the second  attempted to rid itself of “immigrant foreignness” in order to benefit from “the extraordinary mobility of American society.” Identifying with their families’ communities held them back but efforts to throw off those connections left them without real foundations. Adding to the alienation was a movement away from the ethnic-infused religion of their parents. Herberg’s third generation accepted that being an American meant jettisoning the particularities of their descent groups but viewed religion as providing foundational identity compatible with Americanness.[^20]
 
 [^20]:	Will Herberg, _Protestant, Catholic, Jew: An Essay in American Religious Sociology._ (Garden City, N.Y.: Anchor, 1955), 18-32.
 
-The three faith groups not only provided the foundations and distinctiveness that national origin communities once had, they also in Herberg’s rendition eased entrance into the center of American life. They accomplished this feat because they had become three branches of the American religion. By American religion, Herberg meant something quite unlike traditional Western religion. It lacked a common theology and intense emphasis on faith in a transcendent power and the unseen. Instead, it revolved around beliefs that American democracy stood for the brotherhood of man and the dignity of the individual human being. This underlying similarity was the reason that no one was expected to change her religion as she became an American. It became the way in which one located oneself in American society, Herberg maintained. “All other forms of self-identification and social location are either (like regional background) peripheral and obsolescent or else (like ethnic diversity) subsumed under the broader head of religions community.”[^21] President Dwight Eisenhower punctuated the point when he declared that “our government makes no sense unless it is founded in a deeply felt religious faith --- and I don’t care what it is.”
+In Herberg's rendition, the three faith groups actually eased entrance into the center of American life. They accomplished this feat because they had become three branches of the American religion. By American religion, Herberg meant something quite unlike traditional Western religion. It lacked a common theology and intense emphasis on faith in a transcendent power and the unseen. Instead, it was more akin to a national ideology that American democracy stood for the brotherhood of man and the dignity of the individual human being. This shared belief system was why no one was expected to change her religion as she became an American aand why the nominal differences constituted the way one claimed distinctiveness. “All other forms of self-identification and social location are either (like regional background) peripheral and obsolescent or else (like ethnic diversity) subsumed under the broader head of religions community.”[^21] President Dwight Eisenhower punctuated the point when he declared that “our government makes no sense unless it is founded in a deeply felt religious faith --- and I don’t care what it is.”
 
 [^21]:	Herberg, _Protestant, Catholic, Jew_, 38-39.
 
-Herberg bemoaned the lack of religious seriousness of the American religion. Rather than confronting ultimate questions, it devolved into exaggerated judgments of others’ behavior. Religion as morality was the major impulse of the growing use of the phrase “Judeo-Christian tradition,” which signified the centrality of the commonalities among the three religions. It is hard to imagine nineteenth-century religious leaders accepting those similarities were more important than the differences. Herberg drew special attention to shifts in the Catholic Church. The Church might proclaim itself the one true church, but “in their actual social attitudes American Catholics . . . tend to think of their church as a denomination existing side by side with other denominations in a pluralistic harmony.”[^22] As William Halsey notes, many American Catholics believed natural law was compatible with the beliefs of the founding fathers.[^23]
+Herberg bemoaned the lack of religious seriousness of the American religion. Rather than confronting ultimate questions, it devolved into exaggerated judgments of others’ behavior. Religion as morality was the major impulse of the growing use of the phrase “Judeo-Christian tradition,” which signified the centrality of the commonalities among the three religions. It is hard to imagine nineteenth-century religious leaders accepting those similarities were more important than the differences, forming the National Conference of Christians and Jews, or celebrating Gandhi as a moral paragon rather than labeling him a pagan.[^22] Herberg drew special attention to shifts in the Catholic Church. The Church might proclaim itself the one true church, but “in their actual social attitudes American Catholics . . . tend to think of their church as a denomination existing side by side with other denominations in a pluralistic harmony.”[^23] As William Halsey notes, many Catholics believed that natural law was compatible with the inclinations of the Founders.[^24]
 
-[^22]:	Herberg, _Protestant, Catholic, Jew_, 91.
+[^22]:	Alan Petigny, _The Permissive Society: America, 1941-1965_ (New York: Cambridge University Press, 2009), 82-86.
 
-[^23]:	William Halsey, _The Survival of American Innocence: Catholicism in an Era of Disillusionment, 1920-1940_ (Notre Dame, Ind.: University of Notre Dame Press, 1980).
+[^23]: Herberg, _Protestant, Catholic, Jew_, 91.
+
+[^24]:	William Halsey, _The Survival of American Innocence: Catholicism in an Era of Disillusionment, 1920-1940_ (Notre Dame, Ind.: University of Notre Dame Press, 1980).
 
 
-One consequence of the seeming convergence of faiths was the diminishing of religious antagonisms. Although many evangelical sects retained old positions, mainline Protestants were much less vested in the conversion of Jews, more inclined to join such ecumenical brotherhood organizations as the National Conference of Christians and Jews and more likely to celebrate Gandhi as a moral paragon rather than regarding him as a virtuous pagan.[^24] Complementing this decline of prejudice was what observers recognized as a precipitous decline in anti-Semitism. The American Historical Society, long a bastion of Protestant practitioners, elected its first Jewish president in 1953, Louis Gottschalk of the University of Chicago. Jewish authors, even those who plumbed Jewish subject matter and wrote with an undisguised Jewish sensibility that looked askance at the world, received terrific reviews and plaudits as leading American authors. For all their differences, Norman Mailer, Joseph Heller, Philip Roth, and Bernard Malamud were often applauded for their ability to sharpen American literature with protagonists who were neurotic, self-involved, and deeply aware of both their own limitations and the curse of conformity.[^25]
-
-[^24]:	Alan Petigny, _The Permissive Society: America, 1941-1965_ (New York: Cambridge University Press, 2009), 82-86.
+Religious prejudices and restrictions in turn diminished. Protestants devoted less concern to converting Jews while organizations that formerly restricted or prohibited their entrance eased opposition. The American Historical Society, long a bastion of Protestant practitioners, elected its first Jewish president in 1953, Louis Gottschalk of the University of Chicago. Jewish authors, even those who plumbed Jewish subject matter and wrote with an undisguised Jewish sensibility that looked askance at the world, received terrific reviews and plaudits as leading American authors. For all their differences, Norman Mailer, Joseph Heller, Philip Roth, and Bernard Malamud were often applauded for their ability to sharpen American literature with protagonists who were neurotic, self-involved, and deeply aware of both their own limitations and the curse of conformity.[^25]
 
 [^25]:	For an insightful recent discussion of the postwar rise of prominence of Jewish male authors, see George Hutchinson, _Facing the Abyss: American Literature and Culture in the 1940s_ (New York: Columbia University Press, 2018), 159-95.
 
-Jews were a small percentage of the American population, perhaps three percent of the population in 1950. The more compelling case for the triple melting pot was that of the more numerous Catholics. Once shunned as superstitious and insular agents of the antichrist in Rome, Catholics basked in a new acceptance as full-fledged Americans who shared the values and customs of their fellow Americans. Where once even Margaret Mead had regarded Catholics as willfully keeping separate, Protestants were willing to credit Catholic desire to join the mainstream. Join they did, achieving prominence in all walks of life. Ed Sullivan was the nation’s premier impresario on the new medium of television with his popular variety show; Jackie Gleason’s _Honeymooners_ succeeded in large measure because it captured working-class tenement life familiar to many viewers. Perry Como, Frank Sinatra, and Dean Martin dominated popular music. The entertainers did not rely on explicit Catholic content but they made no effort to explicitly deny or disguise their faith. More recognizably Catholic were the heroes of _On the Waterfront_, the broken boxer turned longshoreman Terry Malloy (Marlon Brando) who informs on corruption and murder on the Red Hook docks and Father Barry (Karl Malden) whose assurance that Christ was present eventually persuades Malloy to protect his soul. Just as fascinating was the role of Bishop Fulton J. Sheen, whose television show _Life is Worth Living_ was so popular that it provided significant ratings competition with the perennial leader, the comedy-variety show _Milton Berle_. Sheen attracted viewers of all denominations in part because his discussions had no explicit Catholic doctrine and addressed matters of love and family. Still, as James T. Fisher notes, the general appearance of non-denominational Christianity was deceiving. Sheen masterfully drew upon Aquinas to challenge the chaos and meaninglessness of modern life.[^26]
+Jews were a small percentage of the American population, perhaps three percent of the population in 1950. The more compelling case for the triple melting pot was that of the more numerous Catholics. Once shunned as superstitious and insular agents of the antichrist in Rome, Catholics basked in a new acceptance as full-fledged Americans who shared the values and customs of their fellow Americans. Prior to the war, even someone as tolerant as Margaret Mead regarded Catholics as deliberately insular. After the war, Protestants were more likely to credit Catholic desires to join the mainstream.  Join they did, achieving prominence in all walks of life. Ed Sullivan was the nation’s premier impresario on the new medium of television with his popular variety show; Jackie Gleason’s _Honeymooners_ succeeded in large measure because it captured working-class tenement life familiar to many viewers. Perry Como, Frank Sinatra, and Dean Martin dominated popular music. The entertainers did not rely on explicit Catholic content but they made no effort to explicitly deny or disguise their faith. More recognizably Catholic were the heroes of _On the Waterfront_, the broken boxer turned longshoreman Terry Malloy (Marlon Brando) who informs on corruption and murder on the Red Hook docks and Father Barry (Karl Malden) whose assurance that Christ was present eventually persuades Malloy to protect his soul.
+
+Just as fascinating was the role of Bishop Fulton J. Sheen, whose television show _Life is Worth Living_ was so popular that it provided significant ratings competition with the perennial leader, the comedy-variety show _Milton Berle_. Sheen attracted viewers of all denominations in part because his discussions had no explicit Catholic doctrine and addressed matters of love and family. Still, as James T. Fisher notes, the general appearance of non-denominational Christianity was deceiving. Sheen masterfully drew upon Aquinas to challenge the chaos and meaninglessness of modern life.[^26] Sheen had come to prominence on the radio in the 1930s with _The Catholic Hour_ on NBC and had made a name for himself when he told his listeners that fighting fascism was not only a political imperative but a theological one on the grounds that fascism was the movement of the Anti-Christ. Not surprisingly, he made similar claims during the Cold War. The Catholic hierarchy felt similarly, pitching the struggle as one with godless Communism, thereby easing the way for great Catholic integration into American life after years of Protestant hostility. The ability of Christians of all stripes to oppose Communist regimes in turn lessened Catholic insistence that Protestantism was a reign of error.[^27]
 
 [^26]:	James Terence Fisher, _Communion of Immigrants: A History of Catholics in America_ (Oxford; New York: Oxford University Press, 2008), 116-35.
 
-Sheen had had come to prominence on the radio in the 1930s with _The Catholic Hour_ on NBC and had made a name for himself when he told his listeners that fighting fascism was not only a political imperative but a theological one on the grounds that fascism was the movement of the Anti-Christ. Not surprisingly, he made similar claims during the Cold War. The Catholic hierarchy felt similarly, pitching the struggle as one with godless Communism, thereby easing the way for great Catholic integration into American life after years of Protestant hostility. The ability of Christians of all stripes to oppose Communist regimes in turn lessened Catholic insistence that Protestantism was a reign of error.
+[^27]: Jason Stevens, *God-fearing and Free: A Spiritual History of America's Cold War* (Cambridge: Harvard University Press, 2010).
 
-John F. Kennedy was no theologian but his election as President pointed to the conundrums of Catholic assimilation. Still suspected by many Protestants, Kennedy took the prejudice head on, first in the West Virginia primary and later in the general election. In a famous September address to the Southern Baptist convention in Houston, Kennedy asserted Catholics’ allegiance to American values and the right to participate fully in civil and social life. He affirmed his belief in the absolute separation of Church and State and decried religious tests for office. Such acts would rip apart “the whole fabric of our harmonious society,” something that would weaken the country in the midst of the Cold War. Most Catholics approved of the sentiments but a significant number were wary that Kennedy had so thoroughly divided public and private that his Catholicism seemed totally incidental. Wrote the Jesuit editor of _America_, “a man’s conscience has a bearing on his public as well as his private life.”[^27]
+John F. Kennedy was no theologian but his election as President pointed to the conundrums of Catholic assimilation. Still suspected by many Protestants, Kennedy took the prejudice head on, first in the West Virginia primary and later in the general election. In a famous September address to the Southern Baptist convention in Houston, Kennedy asserted Catholics’ allegiance to American values and the right to participate fully in civil and social life. He affirmed his belief in the absolute separation of Church and State and decried religious tests for office. Such acts would rip apart “the whole fabric of our harmonious society,” something that would weaken the country in the midst of the Cold War. Most Catholics approved of the sentiments but a significant number were wary that Kennedy had so thoroughly divided public and private that his Catholicism seemed totally incidental. Wrote the Jesuit editor of _America_, “a man’s conscience has a bearing on his public as well as his private life.”[^28]
 
-[^27]:	Quoted in Fisher, 131.
+[^28]:	Quoted in Fisher, 131.
 
-Influential as it was, Herberg’s book attracted some meaningful dissent. Critics pointed out that American religion had not fully transformed into the mushy civil religion that Herberg disliked. He did not address fundamentalist Protestantism, which retained the allegiance of large numbers of Americans throughout the period. Far from the bloodless moral creed that Herberg discerned in mainstream Protestantism, fundamentalist denominations continued to believe in Biblical inerrancy, retained suspicion of the antichrist in Rome, and tended toward apocalyptic thinking.[^28] Although by no means as prominent in their respective faiths as fundamentalists were in Protestantism, Catholics and Jews each had substantial orthodox minorities.
+Influential as it was, Herberg’s book attracted some meaningful dissent. Critics pointed out that American religion had not fully transformed into the mushy civil religion that Herberg disliked. He did not address fundamentalist Protestantism, which retained the allegiance of large numbers of Americans throughout the period. Far from the bloodless moral creed that Herberg discerned in mainstream Protestantism, fundamentalist denominations continued to believe in Biblical inerrancy, retained suspicion of the antichrist in Rome, and tended toward apocalyptic thinking.[^29] Although by no means as prominent in their respective faiths as fundamentalists were in Protestantism, Catholics and Jews each had substantial orthodox minorities.
 
-[^28]:	Andrew M. Greeley, _Ethnicity, Denomination, and Inequality_ (Beverly Hills: Sage Publications, 1976); Jason W. Stevens, _God-Fearing and Free: A Spiritual History of America’s Cold War_ (Cambridge: Harvard University Press, 2010); Robert S. Ellwood, _1950, Crossroads of American Religious Life_ (Louisville: Westminster John Knox Press, 2000); Robert Wuthnow, _After Heaven: Spirituality in America Since the 1950s_ (Berkeley: University of California Press, 1998).
+[^29]:	Andrew M. Greeley, _Ethnicity, Denomination, and Inequality_ (Beverly Hills: Sage Publications, 1976); Robert S. Ellwood, _1950, Crossroads of American Religious Life_ (Louisville: Westminster John Knox Press, 2000); Robert Wuthnow, _After Heaven: Spirituality in America Since the 1950s_ (Berkeley: University of California Press, 1998).
 
-Commentators also took issue with Herberg’s position that ethnicity—understood as connections based on common national origins—lost much of its potency in postwar mass society. Rather than disappearing, Nathan Glazer and Daniel Patrick Moynihan suggested in _Beyond the Melting Pot_ (1963), ethnicity was changing. They maintained that the word first appeared in American dictionaries in 1953 in order to signify a new reality. “Ethnicity,” they held, “is the steady expansion of the term ‘ethnic groups’ from minority and marginal subgroups at the edge of society—groups expected to assimilate, to disappear, to continue as survivals, exotic, or troublesome—to major elements of a society.”[^29] Ethnic groups “were recreated as something new, but still as identifiable groups.” They were “not a survival from the age of mass immigration but a new social form.” The language of the homeland may have been spoken much less frequently (although Joshua Zeitz has demonstrated in many enclaves it remained viable well into the late 1950s) and a number of organizations devoted exclusively to the welfare of descent groups may have shut their doors, neighborhoods retained much ethnic homogeneity and much organizational life was, in fact, lived within ethnic bounds.[^30] Craft-based shops maintained relatively homogenous work groups. In addition, the Catholic preference for parochial schools solidified ethnic divisions. Glazer and Moynihan concurred with Herberg that the future would most likely resemble the triple melting pot in which religion provided the basic divisions of identity among the white American population, but it had yet to arrive in 1963.
+Commentators also took issue with Herberg’s position that ethnicity—understood as connections based on common national origins—lost much of its potency in postwar mass society. Rather than disappearing, Nathan Glazer and Daniel Patrick Moynihan suggested in _Beyond the Melting Pot_ (1963), ethnicity was changing. They maintained that the word first appeared in American dictionaries in 1953 signifying a new reality. “Ethnicity,” they held, “is the steady expansion of the term ‘ethnic groups’ from minority and marginal subgroups at the edge of society—groups expected to assimilate, to disappear, to continue as survivals, exotic, or troublesome—to major elements of a society.”[^30] Ethnic groups “were recreated as something new, but still as identifiable groups.” They were “not a survival from the age of mass immigration but a new social form.” Many neighborhoods and work groups still remained ethnically homogenous. As Joshua Zeitz has demonstrated, many New York city enclaves continued to speak the language of the homeland at home and at neighborhood businesses well until the late 1950s. Similarly, fraternal and charitable organizations continued to structure life for many second and third generation ethnics.[^31] In addition, the Catholic preference for parochial schools solidified ethnic divisions. Glazer and Moynihan concurred with Herberg that the future would most likely resemble the triple melting pot in which religion provided the basic divisions of identity among the white American population, but it had yet to arrive in 1963.
 
-[^29]:	Nathan Glazer and Daniel P. Moynihan, _Beyond the Melting Pot; the Negroes, Puerto Ricans, Jews, Italians, and Irish of New York City_ (Cambridge: M.I.T. Press, 1963), 5, 7.
+[^30]:	Nathan Glazer and Daniel P. Moynihan, _Beyond the Melting Pot; the Negroes, Puerto Ricans, Jews, Italians, and Irish of New York City_ (Cambridge: M.I.T. Press, 1963), 5, 7.
 
-[^30]:	Joshua Zeitz, _White Ethnic New York: Jews, Catholics, and the Shaping of Postwar Politics_ (Chapel Hill: University of North Carolina Press, 2007), 11-38.
+[^31]:	Joshua Zeitz, _White Ethnic New York: Jews, Catholics, and the Shaping of Postwar Politics_ (Chapel Hill: University of North Carolina Press, 2007), 11-38.
 
 
 
